--- a/css/projekt-styles.css
+++ b/css/projekt-styles.css
@@ -68,7 +68,7 @@ a.titel h1{
     margin: 10px 0;
 }
 .navbar {
-   background-color: #fff;
+   background-color: #222;
    padding: 5px 0;
    border: none;
 }
