--- a/css/projekt-styles.css
+++ b/css/projekt-styles.css
@@ -4,74 +4,30 @@
  * 01.2015 v1
  */
 
-body {
-    width: 100%;
-    height: 100%;
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-    margin-bottom: 35px;
-}
+/* ******* BASE STYLES ****** */
+body { width: 100%; height: 100%; font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;}
+html { width: 100%; height: 100%;}
+p { font-size: 14px; line-height: 1.75;}
+p.large { font-size: 16px;}
+h1 { font-size: 42px;}
 
-html {
-    width: 100%;
-    height: 100%;
-}
-p {
-    font-size: 14px;
-    line-height: 1.75;
-}
+@font-face {font-family:"cinnamon cake";src:url("../fonts/cinnamon_cake.eot?") format("eot"),url("../fonts/cinnamon_cake.woff") format("woff"),url("../fonts/cinnamon_cake.ttf") format("truetype"),url("../fonts/cinnamon_cake.svg#cinnamoncake") format("svg");font-weight:normal;font-style:normal;}
 
-p.large {
-    font-size: 16px;
-}
 a,
 a:hover,
 a:focus,
 a:active,
-a.active {
-    outline: 0;
-}
-
-a.readmore {
-    margin-top: 5px;
-}
-
+a.active { outline: 0;}
+a.readmore { margin-top: 5px;}
 a:hover,
 a:focus,
 a:active,
-a.active {
-    /*color: #fff;*/
-}
-
-@font-face {font-family:"cinnamon cake";src:url("../fonts/cinnamon_cake.eot?") format("eot"),url("../fonts/cinnamon_cake.woff") format("woff"),url("../fonts/cinnamon_cake.ttf") format("truetype"),url("../fonts/cinnamon_cake.svg#cinnamoncake") format("svg");font-weight:normal;font-style:normal;}
-
-
-a.titel {
-    float: left;
-    padding: 0;
-    margin-left: 5px;
-}
-
-a.titel img {
-    float: left;
-    padding: 0;
-    margin: 6px 8px 4px ;
-    height: 28px;
-}
-
-a.titel h1{
-    font-family:"cinnamon cake";
-    font-size: 24px;
-    font-weight: 400;
-    color: #fff;
-    float: left;
-    padding: 0;
-    margin: 10px 0;
-}
-.navbar {
-   background-color: #222;
-   padding: 5px 0;
-   border: none;
-}
+a.active { /*color: #fff;*/}
+/* ******* NAV TOP BAR ****** */
+a.titel { float: left; padding: 0; margin-left: 5px;}
+a.titel img { float: left; padding: 0; margin: 6px 8px 4px ; height: 28px;}
+a.titel h1{ font-family:"cinnamon cake"; font-size: 24px; font-weight: 400; color: #fff; float: left; padding: 0; margin: 10px 0;}
+.navbar { background-color: #222; padding: 5px 0; border: none;}
 .navbar-nav {
     float: right;
     /*padding: 0;
@@ -84,26 +40,17 @@ a.titel h1{
     color: #222;
     text-transform: uppercase;
 }
-.navbar-nav li a:hover,
-.navbar-nav li a:focus{
-    color: #222;
-    background-color: #fff;
+.navbar-nav li a.page-scroll:hover,
+.navbar-nav li a.page-scroll:focus{
+    color: #fff;
+    background-color: #666;
 }
-.navbar-nav li a:active,
-.navbar-nav li a.active,
-.navbar-nav li:active,
-.navbar-nav li.active {
-    color: #222;
-    background-color: #fff;
+.navbar-nav li a.page-scroll:active,
+.navbar-nav li a.page-scroll.active {
+    color: #fff;
+    background-color: #666;
 }
- .top-nav-collapse {
-    
-    }
- .top-nav-collapse {
-    
-    }
-.top-nav-collapse a.titel img {
-    }
+
 @media(min-width:600px) {
 a.titel img {
     float: left;
@@ -124,19 +71,19 @@ a.titel h1{
 
 
 @media(min-width:767px) {
-    .navbar {
+.navbar {
         background: none;
         padding: 30px 0;
         -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
         -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
         transition: background .5s ease-in-out,padding .5s ease-in-out;
     }
-    .navbar li a.page-scroll{
+.navbar li a.page-scroll{
         font-size: 18px;
         color: #fff;
     }
-    .navbar li a.page-scroll:hover,
-    .navbar-nav li a.active:focus {
+.navbar li a.page-scroll:hover,
+.navbar-nav li a.active:focus {
         color: #222;
         background-color: #fff;
     }
@@ -151,13 +98,13 @@ a.titel h1{
 .navbar-nav li.active {
     color: #222;
     background-color: #fff;
-}    a.titel img {
+}    
+a.titel img {
     float: left;
     padding: 0;
     margin: 0 8px;
     height: 44px;
 }
-
 a.titel h1{
     font-family:"cinnamon cake";
     font-size: 32px;
@@ -166,12 +113,11 @@ a.titel h1{
     padding: 0;
     margin: 10px 0;
 }
-
-    .top-nav-collapse {
+.top-nav-collapse {
         background: #222;
         padding: 0;
     }
-    .top-nav-collapse a.titel img {
+.top-nav-collapse a.titel img {
         height: 32px;
         margin: 12px 8px;
     }
@@ -180,30 +126,31 @@ a.titel h1{
 
 /* ******* HEADER INTRO SLIDER ****** */
 .intro-section {
-    height: 400px;
+    height: 100%;
     padding-top: 0px;
     text-align: center;
-    background: #fff;
 }
 .carousel,
-.item,
-.active {
-    height: 400px;
+.carousel-inner .item,
+.carousel-inner .active {
+    height: 100%;
 }
 .carousel,
-.item {
+.carousel-inner .item {
     width: 100%;
 }
 .carousel-inner {
     height: 100%;
-    padding-bottom:30px;
 }
-.carousel-inner .carousel img,
+.carousel-caption {
+	z-index: 10;
+	padding-bottom: 50px;
+}
+/*.carousel-inner .carousel img,
 .carousel-inner .item img {
     height: 100%;
     width: 100%;
-}
-
+}*/
 .carousel-control.left {
   background-image: none;
 }
@@ -213,6 +160,34 @@ a.titel h1{
 .carousel-indicators {
   bottom: 20px;
 }
+.carousel .carousel-inner .bg {
+	background-repeat:no-repeat;
+	background-size:cover;
+}
+.carousel .carousel-inner .bg img {
+	width: 100%;
+	margin-top: 50px;
+}
+.carousel .carousel-inner .intro1 {
+	/*background-image:url(bg1.jpg);
+	background-position: center top; */
+	background-color: #26760C;
+}
+.carousel .carousel-inner .intro1 h2 {
+	/*background-image:url(bg1.jpg);
+	background-position: center top; */
+	color: rgba(215, 40, 40, 0.9);
+}
+.carousel .carousel-inner .intro2 {
+	/*background-image:url(bg2.jpg);
+	background-position: center center; */
+	background-color: #E81C2B;
+}
+.carousel .carousel-inner .intro3 {
+	/*background-image:url(bg3.jpg);
+	background-position: center bottom; */
+	background-color: #36BAB4;
+}
 @media(min-width:768px) {
 .intro-section {
     height: 100%;
@@ -221,24 +196,47 @@ a.titel h1{
     background: #fff;
 }
 .carousel,
-.item,
-.active {
+.carousel-inner .item,
+.carousel-inner .active {
     height: 100%;
 }
 .carousel-indicators {
   bottom: 40px;
 }
+.carousel .carousel-inner .bg img {
+	width: 100%;
+	margin-top: 0px;
 }
-/* Slides */
-.introslide1{
-    
+.carousel .carousel-inner h2 {
+	font-weight: 700;
+	font-size: 60px;
 }
-.introslide1{
-    
+.carousel .carousel-inner h4 {
+	font-weight: 400;
+	font-size: 32px;
 }
-.introslide1{
-   
+.carousel .carousel-inner p {
+	font-weight: 200;
+	font-size: 20px;
+	line-height: 20px;
 }
+.carousel .carousel-inner .intro1 img {
+	width: 70%;
+	margin-top: 0px;
+}
+.carousel .carousel-inner .intro1 {
+	/*background-image:url(bg1.jpg);
+	background-position: center top; */
+	background-color: #26760C;
+	color: #222;
+}
+.carousel .carousel-inner .intro1 h2 {
+	/*background-image:url(bg1.jpg);
+	background-position: center top; */
+	color: rgba(215, 40, 40, 0.9);
+}
+}
+
 /* ******* CONTAINER ****** */
 .container {
   padding-right: 15px;
@@ -300,7 +298,7 @@ a.titel h1{
 /* ******* ABOUT SECTION ****** */
 .about-section {
     min-height: 100%;
-    padding-top: 100px;
+    padding-top: 80px;
     text-align: center;
     background: #eee;
 }
@@ -311,7 +309,7 @@ a.titel h1{
 /* ******* PROJEKT SECTION ****** */
 .projekte-section {
     /*height: 100%;*/
-    padding-top: 100px;
+    padding-top: 80px;
     text-align: center;
     background: #fff;
     padding-bottom: 45px;
@@ -387,9 +385,9 @@ a.titel h1{
 }
 
 .timeline>li .timeline-image h4 {
-    margin-top: 12px;
+    margin-top: 14px;
     font-size: 18px;
-    line-height: 14px;
+    line-height: 18px;
 }
 
 .timeline>li.timeline-inverted>.timeline-panel {
@@ -554,21 +552,22 @@ a.titel h1{
 
 /* ******* MEMBERS SECTION ****** */
 .members-section {
-    height: 100%;
-    padding-top: 100px;
+    min-height: 100%;
+    padding-top: 80px;
     text-align: center;
     background: #fff;
     padding-bottom: 45px;
 }
 /* ******* KONTAKT SECTION ****** */
 .contact-section {
-    height: 100%;
-    padding-top: 100px;
+    min-height: 100%;
+    padding-top: 80px;
     text-align: center;
-    background: #eee;
+    background-color: #222;
+    padding-bottom: 45px;
 }
 section#contact {
-    background-color: #222;
+    /*background-color: #222;*/
     /*background-image: url(../img/map-image.png);
     background-position: center;
     background-repeat: no-repeat;*/
